--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 .centerGame {
     display: flex;
     align-content: space-around;
-    text-align: justify;
+    text-align: left;
 }
 
 .centerShop {
